Configs/Code - OSS/logs/20210821T150341/exthost1/output_logging_20210821T151202/3-TerosHDL.log
export  VUNIT_GHDL_PATH=;export  VUNIT_SIMULATOR=ghdl;cd /home/sane/Coding/Verilog/test;python3 mux16x1_test.vcd   --no-color -x teroshdl_out.xml --exit-0   --verbose    File "/home/sane/Coding/Verilog/test/mux16x1_test.vcd", line 1
    $date
    ^
SyntaxError: invalid syntax
